# CRC: 11E85D0BF540A03612B9D5AB8A950728315E7F9C027CC962DA6AC76EA8C285EC0B3B59390095A52F3767155B1D842AEBCFA5F2681F1E45B8FFBCCB5956EEC25E9A0D46BD3B6AACB92DE4D84759EBB5079CA9DA2D2BBCDAE2A4D1C56CD1580BF5DCD9635B0392FDC9861EED52201BE907CCEA1B817834BEA8B88A04B89BE4E371F5DFCBA1C4576849B15875604C717DBE6AFF544B3E1DA07759D516116B75B8546545B8A1B3D68E1253D62B8417EB9907D1457DCFF3EA7FB9B3366245709592610749F26D714478A2C86A686F9A12B10A14CEF670A07869282EABD4ED9561D2123431AF726C5DC381
# REVISION: 1.0
# GUID: DF5CB9CF-A773-4CE0-8B68-6B0F1B88C7BE
# DATE: 08\08\2022
# DIR: FCD\PICO\batch\CMakeLists.txt
cmake_minimum_required(VERSION 3.12)
include(pico_sdk_import.cmake)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
project(flowcode)
add_executable(flowcode flowcode.c)
target_link_libraries(flowcode pico_stdlib hardware_adc hardware_spi hardware_pwm hardware_i2c)
pico_add_extra_outputs(flowcode)

